Update developer guide

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -241,12 +241,12 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 This section describes some noteworthy details on how certain features are implemented.
 
 === Shifts feature
-*Reason for implementation*
+==== Reason for implementation
 
 PTMan is designed to give employees the freedom and flexibility to choose the shifts they want to work in.
 By allowing employers to add or delete shifts, employees can then apply for shifts that are available.
 
-*How it is implemented*
+==== How it is implemented
 
 A `Shift` object is created using it's constructor:
 ----
@@ -255,10 +255,10 @@ Shift(Day day, Time startTime, Time endTime, Capacity capacity)
 
 Explanation for arguments:
 
-. `Day`: A class that wraps Java's `DayOfWeek` enum. It indicates the day that the shift is on. +
-Example: `new Day("monday")` creates a `Day` object representing Monday.
+. `Date`: A class that wraps Java's `LocalDate` class. It indicates the date that the shift is on. +
+Example: `new Date("12-03-18")` creates a `Date` object representing 12 March 2018.
 [NOTE]
-The string argument is not case-sensitive, but should be a valid day of week spelt in full.
+The string argument should represent a date in the DD-MM-YY format.
 
 . `Time`: A class that wraps Java's `LocalTime` class. It indicates the either the starting time or ending time of the shift. +
 Example: `new Time("1030")` creates a `Time` object representing 10:30am.
@@ -281,7 +281,7 @@ The following commands directly interact with the `Shift` class:
 . `UnapplyCommand`: Removes an `Employee` from the `UniqueEmployeeList` in the `Shift`.
 
 
-*Reasons for how it is implemented*
+==== Reasons for how it is implemented
 
 * We wrap the arguments in the classes above so that we may carry out validity checks in those classes.
 
