--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -215,7 +215,7 @@ The `Model`,
 
 * stores a `UserPref` object that represents the user's preferences.
 * stores the Address Book data.
-* exposes an unmodifiable `ObservableList<Person>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
+* exposes an unmodifiable `ObservableList<Employee>` and `ObservableList<Shift>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the lists change.
 * does not depend on any of the other three components.
 
 [[Design-Storage]]
@@ -285,7 +285,7 @@ The following commands directly interact with the `Shift` class:
 
 * We wrap the arguments in the classes above so that we may carry out validity checks in those classes.
 
-* `Time` uses Java's well-documented `LocalTime` class for easy integration with the GUI timetable.
+* `Time` and `Date` uses Java's well-documented `LocalTime` and `LocalDate` classes for easy integration with the GUI timetable.
 
 * `UniqueEmployeeList` is used to ensure there are no duplicate employees in the shift.
 
