--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Part-time Manager (PTMan)
+= image:docs/images/ptman_logo_readme.png[width="400"]
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.org/CS2103JAN2018-W14-B2/main[image:https://travis-ci.org/CS2103JAN2018-W14-B2/main.svg?branch=master[Build Status]]
