--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -213,16 +213,16 @@ An employee can have any number of tags (including 0)
 
 Guided Example:
 
-We have an employee *John Doe* with phone number *98765432*, email address *johnd@example.com*, and stays in *311, Clementi Ave 2, #02-25*.
+* We have an employee *John Doe* with phone number *98765432*, email address *johnd@example.com*, and stays in *311, Clementi Ave 2, #02-25*.
 He has earned *$0* so far, and takes the role of a *Barista* and a *Cashier*. +
 To add John Doe into PTMan, we can do the following as illustrated in _Figure 3_.
-
++
 image::Ui_add1.png[width="790"]
 _Figure 3._ Example of `add` command usage +
-
++
 Click kbd:[Enter] and you would see a confirmation message below the command bar, and John Doe being added into your Employee list.
 _Figure 4_ shows how PTMan should look like after the above command.
-
++
 image::Ui_add2.png[width="790"]
 _Figure 4._ Successful addition of employee into PTMan +
 
@@ -389,17 +389,17 @@ For example, `h/0900-2200` +
 
 Guided Example:
 
-When you first start using PTMan, your outlet name will be DefaultOutlet, and the outlet information would not reflect that of your outlet.
+* When you first start using PTMan, your outlet name will be DefaultOutlet, and the outlet information would not reflect that of your outlet.
 Your outlet is called *AwesomeCoffee*, with operating hours from *10am* to *11pm*.
 The outlet's contact number is *98134086* and has email *awesomecoffee@gmail.com*. +
 To make these changes into PTMan, we can do the following as illustrated in _Figure 5_.
-
++
 image::Ui_editoutlet1.png[width="790"]
 _Figure 5._ Example of `add` command usage +
-
++
 Click kbd:[Enter] and you would see a confirmation message below the command bar, and the changes applied to the outlet information.
 _Figure 6_ shows how PTMan should look like after the above command.
-
++
 image::Ui_editoutlet2.png[width="790"]
 _Figure 6._ Successful addition of employee into PTMan +
 
@@ -412,16 +412,16 @@ Sets an announcement for the outlet. +
 
 Guided Example:
 
-Your store has a *new drink released this coming Wednesday*, and you want your employees who come working on Wednesday to be
+* Your store has a *new drink released this coming Wednesday*, and you want your employees who come working on Wednesday to be
 familiar with the recipe for it. Why not leave a note for your employees so that they can be prepared for their shifts?
 To make an announcement in PTMan, we can dp the following as illustrated in _Figure 7_.
-
++
 image::Ui_announcement1.png[width="790"]
 _Figure 7._ Example of `add` command usage +
-
++
 Click kbd:[Enter] and you would see a confirmation message below the command bar, and the changes applied to the announcement.
 _Figure 8_ shows how PTMan should look like after the above command.
-
++
 image::Ui_announcement2.png[width="790"]
 _Figure 8._ Successful addition of employee into PTMan +
 
